...
            <Appbar.Content
              titleStyle={{
                fontWeight: "bold",
                color: theme.dark ? "#E6ECF5" : "#000",
                fontSize: 24,
              }}
              title={options.title ?? "Settings"}
            />
          </Appbar.Header>
        ),
      }}
    >
      <Stack.Screen
...
          title: "Notifications",
        }}
      />
      <Stack.Screen
        name="preferences/gps"
        options={{
          title: "GPS",
        }}
      />
      <Stack.Screen
        name="support/about-us"
        options={{
          title: "About Us",
...
